# osfs

./: .gitignore  Cargo.toml  LICENSE
simdisk/: Cargo.toml
src/: bitmap.rs  disk.rs  fs.rs  lib.rs  logger.rs  main.rs  models.rs  sedes.rs  server.rs  services.rs  utils.rs
src/fs/: bitmap.rs  data.rs  dir.rs  disk.rs  file.rs  inode.rs  metadata.rs  superblock.rs  utils.rs
src/models/: data.rs  disk.rs  file.rs  inode.rs  superblock.rs
src/services/: cat.rs  cd.rs  check.rs  cp.rs  echo.rs  info.rs  login.rs  ls.rs  mkdir.rs  output.rs  permission.rs  rm.rs  touch.rs  utils.rs
